[package]
name = "hypercolor-core"
description = "Core engine for the Hypercolor RGB lighting orchestration system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
nvidia = ["dep:nvml-wrapper"]
default = []
servo = [
    "dep:base",
    "dep:servo",
    "dep:profile_traits",
    "dep:dpi",
    "dep:gleam",
    "dep:raw-window-handle",
    "dep:tao",
]
servo-gpu-import = [
    "servo",
    "dep:hypercolor-linux-gpu-interop",
    "dep:wgpu",
]

[dependencies]
hypercolor-types = { workspace = true }
hypercolor-driver-api = { workspace = true }
hypercolor-hal = { workspace = true }
hypercolor-linux-gpu-interop = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
arc-swap = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
notify = { workspace = true }
sysinfo = { workspace = true }
mdns-sd = { workspace = true }
reqwest = { workspace = true }
nusb = { workspace = true }
realfft = { workspace = true }
rustfft = { workspace = true }
cpal = { workspace = true }
device_query = { workspace = true }
tokio-util = { workspace = true }
zerocopy = { workspace = true }
fast_image_resize = { workspace = true }
base = { package = "servo-base", version = "0.1.0", optional = true }
profile_traits = { package = "servo-profile-traits", version = "0.1.0", optional = true }
wgpu = { workspace = true, optional = true }
dpi = { workspace = true, optional = true }
nvml-wrapper = { workspace = true, optional = true }
servo = { version = "0.1.0", default-features = false, features = ["baked-in-resources", "js_jit"], optional = true }
# Pinned to match servo-paint-api's `Rc<dyn gleam::gl::Gl>` so the direct
# glReadPixels path in servo/worker.rs can call into Servo's context.
gleam = { version = "0.15", optional = true }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = { workspace = true }
ashpd = { workspace = true }
pipewire = { workspace = true }
evdev = { workspace = true }
zbus = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
servo = { version = "0.1.0", default-features = false, features = ["baked-in-resources", "js_jit", "no-wgl"], optional = true }
raw-window-handle = { version = "0.6", optional = true }
tao = { version = "0.34", default-features = false, features = ["rwh_06"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
log = "0.4"
criterion = { workspace = true }
gif = { workspace = true }
pollster = { workspace = true }

[[bench]]
name = "core_pipeline"
harness = false
