[package]
name = "hypercolor-daemon-link"
description = "Daemon-cloud multiplexed connection protocol for Hypercolor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
hypercolor-cloud-api = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
uuid = { workspace = true }
