[package]
name = "hypercolor-daemon"
description = "Daemon service for the Hypercolor RGB lighting engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "hypercolor-daemon"
path = "src/main.rs"

[lints]
workspace = true

[features]
hue = ["dep:hypercolor-driver-hue"]
nanoleaf = ["dep:hypercolor-driver-nanoleaf"]
wgpu = ["dep:wgpu", "dep:pollster"]
default = ["hue", "nanoleaf"]
servo = ["hypercolor-core/servo"]

[dependencies]
hypercolor-types = { workspace = true }
hypercolor-core = { path = "../hypercolor-core", default-features = false }
hypercolor-hal = { workspace = true }
hypercolor-driver-api = { workspace = true }
hypercolor-driver-hue = { workspace = true, optional = true }
hypercolor-driver-nanoleaf = { workspace = true, optional = true }
hypercolor-driver-wled = { workspace = true }
hypercolor-network = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
cpal = { workspace = true }
image = { workspace = true }
turbojpeg = { workspace = true }
tokio-util = { workspace = true }
mdns-sd = { workspace = true }
owo-colors = { workspace = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
sd-notify = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
http = "1.2"
reqwest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "render_pipeline"
harness = false
