[package]
name = "hypercolor-driver-api"
description = "Stable host and capability boundary for Hypercolor network drivers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hypercolor-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
tokio = { workspace = true }
mdns-sd = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
