[package]
name = "hypercolor-driver-nanoleaf"
description = "Modular Nanoleaf network driver for Hypercolor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hypercolor-core = { path = "../hypercolor-core", default-features = false, features = ["nanoleaf"] }
hypercolor-driver-api = { workspace = true }
hypercolor-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
