[package]
name = "hypercolor-driver-openrgb"
description = "OpenRGB fallback bridge driver for Hypercolor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hypercolor-driver-api = { workspace = true }
hypercolor-openrgb-sdk = { workspace = true }
hypercolor-types = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

