[package]
name = "hypercolor-hal"
description = "Hardware abstraction layer for native USB RGB drivers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hypercolor-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nusb = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
