[package]
name = "hypercolor-hal"
description = "Hardware abstraction layer for native USB RGB drivers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
hypercolor-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
nusb = { workspace = true }
tokio = { workspace = true }
tokio-serial = "5"
zerocopy = { workspace = true }
hidapi = { version = "2.6", default-features = false, features = ["linux-static-hidraw", "macos-shared-device"] }
midir = "0.10.3"
image = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
async-hid = { version = "0.5.0", default-features = false, features = ["tokio"] }
futures-util = { workspace = true }
i2cdev = "0.6.2"

[dev-dependencies]
serde_json = { workspace = true }
