[package]
name = "hypercolor-linux-gpu-interop"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Linux GL/Vulkan texture import boundary for Hypercolor"

[features]
default = []
raw-gl-fixture = []

[dependencies]
ash = { workspace = true }
glow = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { workspace = true }

[dev-dependencies]
euclid = "0.22"
pollster = { workspace = true }
surfman = { version = "0.11", features = ["sm-x11"] }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
