[package]
name = "hypercolor-linux-gpu-interop"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Linux GL/Vulkan texture import boundary for Hypercolor"

[features]
default = []
raw-gl-fixture = ["dep:euclid", "dep:surfman"]
servo-context = ["dep:dpi", "dep:euclid", "dep:gleam", "dep:servo", "dep:surfman"]

[dependencies]
ash = { workspace = true }
dpi = { workspace = true, optional = true }
euclid = { version = "0.22", optional = true }
gleam = { version = "0.15", optional = true }
glow = { workspace = true }
libc = { workspace = true }
servo = { version = "0.1.0", default-features = false, features = ["baked-in-resources", "js_jit"], optional = true }
surfman = { version = "0.11", features = ["sm-x11"], optional = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
