[package]
name = "hypercolor-tray"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "System tray applet for the Hypercolor RGB lighting daemon"

[[bin]]
name = "hypercolor-tray"
path = "src/main.rs"

[dependencies]
hypercolor-core = { workspace = true }
hypercolor-types = { workspace = true }

# Tray icon (cross-platform: Linux via libappindicator, macOS via AppKit)
# muda is re-exported by tray-icon as tray_icon::menu — no separate dep needed.
tray-icon = "0.19"

# Async runtime + HTTP/WS client
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling + logging
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Image for tray icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Open browser
open = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSEvent"] }
objc2-foundation = { version = "0.3", features = ["NSDate", "NSRunLoop", "NSObjCRuntime", "NSString"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

[lints]
workspace = true
