[package]
name = "hypercolor-ui"
description = "Leptos CSR web frontend for the Hypercolor lighting engine"
version = "0.1.0"
edition = "2024"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
license = "Apache-2.0"
repository = "https://github.com/hyperb1iss/hypercolor"
rust-version = "1.85"

# ── Leptos CSR ───────────────────────────────────────────────────────────

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
leptos_meta = "0.8"
leptos-use = "0.18"
codee = { version = "0.3", features = ["json_serde"] }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hypercolor-types = { path = "../hypercolor-types" }
uuid = { version = "1.11", features = ["v7", "serde", "js"] }
leptos_icons = "0.7"
icondata = { version = "0.7", default-features = false, features = ["lucide"] }
icondata_core = "0.1"
leptoaster = { version = "0.2", features = ["csr"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Window",
    "Document",
    "KeyboardEvent",
    "MessageEvent",
    "BinaryType",
    "WebSocket",
] }
