[package]
name = "hypercolor-windows-gpu-interop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Windows D3D11/Vulkan texture import boundary for Hypercolor"

[features]
default = []
servo-context = [
  "dep:dpi",
  "dep:euclid",
  "dep:gleam",
  "dep:glow",
  "dep:image",
  "dep:paint_api",
  "dep:surfman",
  "dep:tracing",
  "dep:webrender_api",
  "dep:winapi",
  "dep:wio",
]

[dependencies]
thiserror = { workspace = true }
wgpu = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
wgpu-hal = { workspace = true, features = ["vulkan"] }
windows = { version = "0.62", default-features = false, features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_System_LibraryLoader",
] }
dpi = { workspace = true, optional = true }
euclid = { version = "0.22", optional = true }
gleam = { version = "0.15", optional = true }
glow = { workspace = true, optional = true }
image = { workspace = true, optional = true }
paint_api = { workspace = true, optional = true }
surfman = { workspace = true, features = ["sm-angle-builtin", "sm-angle-default"], optional = true }
tracing = { workspace = true, optional = true }
webrender_api = { workspace = true, optional = true }
winapi = { version = "0.3", features = ["d3d11", "dxgi", "winerror"], optional = true }
wio = { version = "0.2", optional = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"
